src/App.css
body{
  margin: 0;
}

h1, p {
  font-family: 'Merriweather', serif;
}

h1{
  font-weight: bold;
  text-align: left;
}

h4{
  text-align: left;
  text-transform: uppercase;
  font-family: arial, sans-serif;
  font-size: 14px;
  margin: 0;
  padding-bottom: 15px;
}

h5{
  position: relative;
  font-weight: normal;
  float: left;
  padding: 0;
  margin: 0;
  font-family: arial, helvetica, sans-serif;
  margin-top: -5px;
}

p{
  text-align: left;
  font-size: 14px;
}

a{
  text-decoration: none;
  color: black;
}


img{
  width: 100%;
}


header{
  width: 100%;
  text-align: center;
  padding: 30px 0;
  margin: auto;
}

header p{
  text-align: center;
  margin: auto;
  font-size: 16px;
  font-style: italic;
  color: rgb(150,150,150);
}

#logo{
  background-image: url("./img/lesavoir.svg");
  height: 50px;
  background-repeat: no-repeat;
  background-size: 100% 100%; 
  /* -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .2));
  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .2)); */
  /*width: 100%;*/
  margin: 0 auto;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 10px;
}


.ad {
  margin-top: 20px;
}

.date, .time{
  position: relative;
  margin-top: -20px;
  font-size: 12px
}

.date{
  text-align: left;
  float: left;
}

.time{
  text-align: right;
  float: right; 
}

.container{
  width: 90%;
  max-width: 1200px;
  text-align: center;
  margin: auto;
  border-top: solid 1px black;
}


.left-column h1{
  font-size: 18px;
}


.card2 {
  border-top: solid 1px black;
  margin-top: 30px;
  margin-bottom: 20px;

}

.card2:hover {
  border-top: solid 3px black;
  margin-top: 28px;
  margin-bottom: 20px;

}

.left-column .card2 img{
  margin-top: 20px;
  margin-right: 20px;
  width: 40%;
  float: left;
}

.left-column .card2 h1{
  margin-top: 20px;
}

.left-column{
  margin-bottom: 100px;
}


.card1 {
  border-top: solid 1px orange;
  background-color: rgb(240,240,240,1);
  padding: 19px 17px 17px 17px;
  margin-bottom: 20px;
}

.card1 h1{
  font-size: 24px;
}

.card1 h4{
  color: orange;
}

.card1:hover {
  border-top: solid 3px orange;
  padding-top: 17px
}


.left-column .card3 {
  border-top: solid 1px black;
  padding-top: 2px;
}

.left-column .card3:hover {
  border-top: solid 3px black;
  filter: sepia(100%);
  padding-top: 0px;
}


.left-column .card3 img {
  margin-top: 15px;
}




.middle-column .card2 h1{
  font-size: 16px;
}





.caricatures{
  border-top: solid 1px turquoise;
  background-color: rgb(240,240,240,1);
  padding: 17px;
  padding-top: 19px;
}

.caricatures:hover{
  border-top: solid 3px turquoise;
  background-color: rgb(240,240,240,1);
  padding: 17px;
  padding-top: 17px;
  filter: sepia(310deg);
}


.caricatures h1{
  font-size: 18px;
}

.caricatures h4{
  color: turquoise;
}


.caricatures .card2 h4{
  margin-top: 20px;
  color: black;
}


.caricatures img{
  max-width: 100%;
}

.ad-containter, .ad{
  text-align: center;
  width:468px; 
  height:60px; 
  border:0px; 
  padding:0; 
  overflow:hidden;
  z-index: -100;
}


footer{
  text-align: center;
  left: 0;
  bottom: 0;
  width:100%;
  padding: 20px 0 20px 0;
  /*background-color: #404042;*/
  background-color: black;
  color: white;
  margin: 0;
}

footer p{
  text-align: center;
}

footer a{
  color: white;
  text-decoration: underline;
}

@media (max-width: 768px) {
  .no-mobile {
    display: none;
  }
}

@media (min-width: 900px) {
  .grid {
      text-align: center;
    width: auto;
    margin: auto;
    margin-top: 40px;
      display: grid;
      grid-template-columns: 40% 1fr 30%;
    grid-gap:  20px;
  }

  header{
    padding: 40px 0;
  }

  #logo{
    height: 60px;
  }

}

